--- a/assets/style.css
+++ b/assets/style.css
@@ -10,31 +10,45 @@ body {
     background-color: blanchedalmond;
 }
 
-p {
+.top-bar p {
     font-size: 1em;
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 20%;
 }
 
 .top-bar p {
     background-color:cadetblue;
-    
+}
+
+.top-bar a {
+    justify-content: flex-start;
 }
 
 .outer-container {
     padding: 10px;
 }
 
- button {
+ a {
     background-color: cadetblue;
     }
 
-button :hover {
+ a :hover {
     background-color:cadetblue;
     color: aliceblue;
+    cursor: pointer;
 }
 .top-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+button {
+    background-color: cadetblue;
+    padding: 10px;
+    border-radius: 20%;
+    border: 1px solid black;
 }
 
 .outer-container {
@@ -44,9 +58,9 @@ button :hover {
     justify-content: start ;
 }
 .inner-container {
-    background:cadetblue;
+    background:blanchedalmond;
     height: 100%;
-    width: 50%;
+    width: 60%;
     margin: auto;
     padding: 15px;
     display: flex;
@@ -59,26 +73,36 @@ header {
     display: block;
 }
 
+header, h1 {
+    font-size: 50px;
+}
+
 h1, h2 {
     color: crimson;
     text-align: center;
+    font-size: larger;
 }
 
 .quiz-intro, main{
     margin-bottom: 30vh;
     margin-left: 10%;
     margin-right: 10%;
-    background-color: blanchedalmond;
+    background-color: cadetblue;
 }
 
-.quiz-intro p {
+.quiz-intro, p {
     text-align: center;
 }
 
-.quiz-intro button{
+.quiz-intro, a{
     display: block;
     margin: auto;
-    background-color: blanchedalmond;
+    background-color: cadetblue;
+    margin-bottom: 10px;
+    text-decoration: none;
+    border: 1px solid blanchedalmond;
+    padding: 10px;
+    border-radius: 10%;
     
 }
 
@@ -113,5 +137,8 @@ li {
     max-height: 50px;
 }
 
+@media screen and (max-width: 768px){
+    
+}
 
 
