--- a/assets/style.css
+++ b/assets/style.css
@@ -1,144 +1,95 @@
-* {
+:root {
+    background-color: antiquewhite;
+    font-size: 10px;
+}
+
+*{
+    box-sizing: border-box;font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    
-    color: black;
-
-    }
-body {
-    background-color: blanchedalmond;
+    color: #333;
 }
 
-.top-bar p {
-    font-size: 1em;
-    border: 1px solid black;
-    padding: 10px;
-    border-radius: 20%;
+h1,h2,h3,h4 {
+    margin-bottom: 10px;
 }
 
-.top-bar p {
-    background-color:cadetblue;
+h1 {
+    font-size: 54px;
+    color: #56a5eb;
+    margin-bottom: 50px;
 }
 
-.top-bar a {
-    justify-content: flex-start;
+h1 > span {
+    font-size: 24px;
+    font-weight: 500;
 }
 
-.outer-container {
-    padding: 10px;
+h2 {
+    font-size: 42px;
+    margin-bottom: 40px;
+    font-weight: 700;
 }
 
- a {
-    background-color: cadetblue;
-    }
-
- a :hover {
-    background-color:cadetblue;
-    color: aliceblue;
-    cursor: pointer;
+h3 {
+    font-size: 28px;
+    font-weight: 500;
 }
-.top-bar {
+
+.container {
+    width: 100vw;
+    height: 100vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
 }
 
-button {
-    background-color: cadetblue;
-    padding: 10px;
-    border-radius: 20%;
-    border: 1px solid black;
+.container > * {
+    width: 100%;
 }
 
-.outer-container {
-    height: 100vh;
+.flex-column {
     display: flex;
     flex-direction: column;
-    justify-content: start ;
 }
-.inner-container {
-    background:blanchedalmond;
-    height: 100%;
-    width: 60%;
-    margin: auto;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
+
+.flex-center {
     justify-content: center;
     align-items: center;
 }
 
-header {
-    display: block;
+.justify-center {
+    justify-content: center;
 }
 
-header, h1 {
-    font-size: 50px;
-}
-
-h1, h2 {
-    color: crimson;
-    text-align: center;
-    font-size: larger;
-}
-
-.quiz-intro, main{
-    margin-bottom: 30vh;
-    margin-left: 10%;
-    margin-right: 10%;
-    background-color: cadetblue;
-}
-
-.quiz-intro, p {
+.text-center {
     text-align: center;
 }
 
-.quiz-intro, a{
-    display: block;
-    margin: auto;
-    background-color: cadetblue;
+.hidden {
+    display: none;
+}
+
+
+.btn {
+    text-align: center;
+    border: 1px solid #56a5eb;
+    width: 200px;
+    font-size: 18px;
+    padding: 10px 0;
     margin-bottom: 10px;
     text-decoration: none;
-    border: 1px solid blanchedalmond;
-    padding: 10px;
-    border-radius: 10%;
-    
 }
 
-/*quiz content*/
-main {
-    display:block;
+.btn:hover {
+    background-color: #56a5eb;
+    color: aliceblue;
 }
 
-.questions {
-    
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    transform: none;
 }
-
-li {
-    list-style: none;
-    text-align: center;
-}
-
-/*quiz finish*/
-.quiz-done-screen {
-    
-}
-
-
-/*highscores screen*/
-
-.highscores-screen {
-    
-}
-
-.highscores-screen ol {
-    overflow-y: scroll;
-    max-height: 50px;
-}
-
-@media screen and (max-width: 768px){
-    
-}
-
-
