--- a/assets/game.css
+++ b/assets/game.css
@@ -7,7 +7,7 @@
 }
 
 .choice-container:hover {
-    background-color: #56a5eb;
+    
     color: aliceblue;
 }
 
@@ -20,4 +20,22 @@
 .choice-text {
     padding: 15px;
     width: 100%;
+}
+
+.correct {
+    background-color: greenyellow;
+}
+
+.incorrect {
+    background-color: red;
+}
+
+#hud {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.hud-prefix {
+    text-align: center;
 }
