--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -1,3 +1,9 @@
+body {
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 50px;
+
+}
 .choice-container {
     display: flex;
     margin-bottom: 5px;
@@ -40,4 +46,3 @@
     text-align: center;
 }
 
-#progressBar{}
