--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,14 +37,12 @@ h3 {
 }
 
 .container {
-    width: 100vw;
-    height: 100vw;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 80rem;
-    margin: 0 auto;
-    padding: 20px;
+    margin: 0 auto;  
 }
 
 .container > * {
